<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.bagus.purchasingapp_mtn.ui.user_profile.UserProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_below="@id/imageView"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:text="@{viewModel.name}"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/name"
                        android:id="@+id/name"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:text="@{viewModel.nik}"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/nik"
                        android:id="@+id/nik"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toStartOf="@id/buttonUpdatePhone"
                        android:layout_toLeftOf="@id/buttonUpdatePhone">

                        <android.support.design.widget.TextInputEditText
                            android:enabled="@{viewModel.isLoading ? false : true}"
                            android:text="@{viewModel.phone}"
                            android:hint="@string/phone"
                            android:id="@+id/phone"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorPrimary"
                            android:drawableLeft="@drawable/ic_phone"
                            android:drawableStart="@drawable/ic_phone"
                            tools:ignore="UnusedAttribute" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:enabled="@{viewModel.isLoading ? false : true}"
                        android:onClick="@{()->viewModel.updatePhone()}"
                        android:id="@+id/buttonUpdatePhone"
                        android:text="@string/update"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:text="@{viewModel.position}"
                        android:hint="@string/position"
                        android:clickable="false"
                        android:focusable="false"
                        android:id="@+id/position"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:text="@{viewModel.level}"
                        android:hint="@string/level"
                        android:clickable="false"
                        android:focusable="false"
                        android:id="@+id/level"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:background="@color/greyLight"
                    android:layout_height="10dp" />

                <TextView
                    android:text="@string/update_password"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:enabled="@{viewModel.isLoading ? false : true}"
                        android:hint="@string/passwordcurrent"
                        android:id="@+id/passwordcurrent"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:enabled="@{viewModel.isLoading ? false : true}"
                        android:hint="@string/passwordnew"
                        android:id="@+id/passwordnew"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:enabled="@{viewModel.isLoading ? false : true}"
                        android:hint="@string/passwordconfirm"
                        android:id="@+id/passwordconfirm"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:enabled="@{viewModel.isLoading ? false : true}"
                    android:onClick="@{()->viewModel.updatePassword()}"
                    android:id="@+id/updatePassword"
                    android:text="@string/update_password"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_label_status_blue_dark"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ProgressBar
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                android:indeterminateTint="@color/colorAccent"
                android:indeterminate="true"
                android:layout_marginTop="-7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                tools:ignore="UnusedAttribute" />
        </RelativeLayout>
    </ScrollView>
</layout>