<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.bagus.purchasingapp_mtn.ui.login.LoginViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true">

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/logo"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout0"
                android:layout_below="@id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:hint="@string/nik">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nik"
                    android:inputType="textCapCharacters|number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout1"
                android:layout_below="@id/layout0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_below="@id/layout1"
                android:text="@string/ingat_saya"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/login"
                android:visibility="@{viewModel.isLoading ? View.GONE : View.VISIBLE}"
                android:onClick="@{()->viewModel.login()}"
                android:layout_below="@id/checkbox"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:background="@drawable/bg_label_status_blue_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/checkbox"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>